--- a/my-svelte-project/public/index.html
+++ b/my-svelte-project/public/index.html
@@ -4,15 +4,20 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>radar</title>
+	<!-- from https://taroyanaka.github.io/vue1/word_counter.html -->
+	<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 	
+	<script defer src='./chart.js'></script>
+	<!-- <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+	<script defer src='./clipboard.js'></script>
 	<script defer src='./build/bundle.js'></script>
 </head>
-
 <body>
 </body>
 </html>
