--- a/my-svelte-project/public/index.html
+++ b/my-svelte-project/public/index.html
@@ -5,6 +5,8 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>radar</title>
+	<!-- from https://github.com/taroyanaka/vue1/blob/main/radar.html -->
+
 	<!-- from https://taroyanaka.github.io/vue1/word_counter.html -->
 	<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
